# VulkanVideo

./: .gitignore  CMakeLists.txt  VulkanVideo.vcxproj  VulkanVideo.vcxproj.filters  compile.sh
include/: QueueFamily.h  VkInstance.h  VkUtils.h
shaders/: fsShader.frag
src/: VkInstance.cpp  main.cpp  wayland-utils.h
